# dataengineeringweekly

./: 05-12-2022  09-11-2022  22-11-2022  LICENSE  README.md  data_engineering_weekly_34.json  data_engineering_weekly_35.json  data_engineering_weekly_36.json  data_engineering_weekly_37.json  data_engineering_weekly_38.json  data_engineering_weekly_39.json  data_engineering_weekly_40.json  data_engineering_weekly_41.json  data_engineering_weekly_42.json  data_engineering_weekly_43.json  data_engineering_weekly_44.json  data_engineering_weekly_45.json  data_engineering_weekly_46.json  data_engineering_weekly_47.json  data_engineering_weekly_48.json  data_engineering_weekly_49.json  data_engineering_weekly_50.json  data_engineering_weekly_51.json  data_engineering_weekly_52.json  data_engineering_weekly_53.json  data_engineering_weekly_54.json  data_engineering_weekly_55.json  data_engineering_weekly_56.json  data_engineering_weekly_57.json  data_engineering_weekly_58.json  data_engineering_weekly_59.json  data_engineering_weekly_60.json  data_engineering_weekly_61.json  data_engineering_weekly_62.json  data_engineering_weekly_63.json  data_engineering_weekly_64.json  data_engineering_weekly_65.json  data_engineering_weekly_66.json  data_engineering_weekly_67.json  data_engineering_weekly_68.json  (+5 more)
02-20-2022/: hifly-labs.yaml
05-15-2022/: rovio-entertainment-corporation.yaml
05-29-2022/: dewitt-clause-or-can-you-benchmark-a-database.yml
06-02-2024/: bridging-the-gap-between-eras-using-debezium-and-CDC.yaml  building-a-custom-static-analysis-tool-for-looker.yml
(+29 files in other folders)
