[tool.poetry]
name = "dataengineeringweekly"
version = "0.1.0"
description = "Data Engineering Weekly Sync"
authors = ["Ananth Packkildurai"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pytest = "^6.2.5"
requests = "^2.27.1"
pyinstaller = "^4.7"
bs4 = "^0.0.1"
article = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
